{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 24,
  "lineage": "ce3111f7-8a7b-1349-5952-9f9c15681310",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0305b4a4eb3e317d2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-217-181-98.compute-1.amazonaws.com",
            "public_ip": "3.217.181.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0577dcf8aa94b9c46",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-55-29-34.compute-1.amazonaws.com",
            "public_ip": "52.55.29.34",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:014942008613:instance/i-044a8a770a900b2de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044a8a770a900b2de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-instance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bb57e06656fce1ee",
            "private_dns": "ip-10-0-0-251.ec2.internal",
            "private_ip": "10.0.0.251",
            "public_ip": "50.19.56.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff5685e6c1cea0e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e34d9ab99c914fd",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023a30b026d41c4aa"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.production-pub",
            "aws_vpc.production",
            "data.aws_ami.amzlinux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eecef118bbf9259",
            "arn": "arn:aws:ec2:us-east-1:014942008613:instance/i-0f84076f1f031cba6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f84076f1f031cba6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-instance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023b4a7efd47a3430",
            "private_dns": "ip-10-0-0-164.ec2.internal",
            "private_ip": "10.0.0.164",
            "public_ip": "3.88.141.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0384b68638ad39683",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e34d9ab99c914fd",
            "tags": {
              "Name": "Wordpress"
            },
            "tags_all": {
              "Name": "Wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f2acfd2fc1ec55a"
            ]
          },
          "dependencies": [
            "aws_db_instance.wordpress",
            "aws_db_subnet_group.wordpress",
            "aws_key_pair.ec2-key-pair",
            "aws_security_group.rds",
            "aws_security_group.wordpress_sg",
            "aws_subnet.production-priv1",
            "aws_subnet.production-priv2",
            "aws_subnet.production-pub",
            "aws_vpc.production",
            "data.aws_ami.amzlinux",
            "tls_private_key.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:internet-gateway/igw-0e7d461ec1cc0b898",
            "id": "igw-0e7d461ec1cc0b898",
            "owner_id": "014942008613",
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "production-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0305b4a4eb3e317d2",
            "connectivity_type": "public",
            "id": "nat-002044eefb070ea76",
            "network_interface_id": "eni-0ea97783ec201e709",
            "private_ip": "10.0.1.13",
            "public_ip": "3.217.181.98",
            "subnet_id": "subnet-0276100932122d0e4",
            "tags": {
              "Name": "Production Priv 1"
            },
            "tags_all": {
              "Name": "Production Priv 1"
            }
          },
          "dependencies": [
            "aws_eip.nat-gateway-priv1",
            "aws_subnet.production-priv1",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "production-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0577dcf8aa94b9c46",
            "connectivity_type": "public",
            "id": "nat-04bfb018a7dd6383d",
            "network_interface_id": "eni-032dd0ebefee2ea93",
            "private_ip": "10.0.2.4",
            "public_ip": "52.55.29.34",
            "subnet_id": "subnet-0b0a0b365d00a2c82",
            "tags": {
              "Name": "Production Priv 2"
            },
            "tags_all": {
              "Name": "Production Priv 2"
            }
          },
          "dependencies": [
            "aws_eip.nat-gateway-priv2",
            "aws_subnet.production-priv2",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "production-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:route-table/rtb-0961060c669ef63d3",
            "id": "rtb-0961060c669ef63d3",
            "owner_id": "014942008613",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7d461ec1cc0b898",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "production-route-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0164caec1242c10ce",
            "route_table_id": "rtb-0961060c669ef63d3",
            "subnet_id": "subnet-02e34d9ab99c914fd"
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_route_table.production-route-table",
            "aws_subnet.production-pub",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "production-route-associate-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e71f5914ad635b40",
            "route_table_id": "rtb-0961060c669ef63d3",
            "subnet_id": "subnet-0276100932122d0e4"
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_route_table.production-route-table",
            "aws_subnet.production-priv1",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "production-route-associate-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc950c0f774160c",
            "route_table_id": "rtb-0961060c669ef63d3",
            "subnet_id": "subnet-0b0a0b365d00a2c82"
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_route_table.production-route-table",
            "aws_subnet.production-priv2",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:security-group/sg-023a30b026d41c4aa",
            "description": "bastion security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023a30b026d41c4aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "014942008613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh"
            },
            "tags_all": {
              "Name": "allow ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:security-group/sg-001ad2240682b133e",
            "description": "security group rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001ad2240682b133e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "allow rds",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds wordpress",
            "name_prefix": "",
            "owner_id": "014942008613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds security group"
            },
            "tags_all": {
              "Name": "rds security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:security-group/sg-05f2acfd2fc1ec55a",
            "description": "wordpress security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f2acfd2fc1ec55a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress_sg",
            "name_prefix": "",
            "owner_id": "014942008613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_Ports"
            },
            "tags_all": {
              "Name": "Allow_Ports"
            },
            "timeouts": null,
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:subnet/subnet-0276100932122d0e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0276100932122d0e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014942008613",
            "tags": {
              "Name": "production-priv1"
            },
            "tags_all": {
              "Name": "production-priv1"
            },
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:subnet/subnet-0b0a0b365d00a2c82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b0a0b365d00a2c82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014942008613",
            "tags": {
              "Name": "production-priv2"
            },
            "tags_all": {
              "Name": "production-priv2"
            },
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:subnet/subnet-02e34d9ab99c914fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02e34d9ab99c914fd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014942008613",
            "tags": {
              "Name": "production-pub"
            },
            "tags_all": {
              "Name": "production-pub"
            },
            "vpc_id": "vpc-0902bdfd144a986e8"
          },
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014942008613:vpc/vpc-0902bdfd144a986e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4dd8df341f823cd",
            "default_route_table_id": "rtb-0575568c18a14f196",
            "default_security_group_id": "sg-025ea5fef717668c4",
            "dhcp_options_id": "dopt-047d848210fa2a2c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0902bdfd144a986e8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0575568c18a14f196",
            "owner_id": "014942008613",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}